# SmallGameEngine

./: CMakeLists.txt  README.md
include/: FontManager.h  Game.h  Random.h  SoundManager.h  TextureManager.h  Vector2D.h  Window.h
include/components/: Collider.h  Sprite.h  Transform.h
include/events/: KeyDown.h  KeyUp.h
include/systems/: CollisionSystem.cpp  CollisionSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h
src/: FontManager.cpp  Game.cpp  SoundManager.cpp  TextureManager.cpp  Vector2D.cpp  Window.cpp  main.cpp
